--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   },
   "dependencies": {
     "aos": "^2.3.4",
-    "axios": "^1.7.9",
+    "axios": "^1.9.0",
     "bootstrap": "^5.3.3",
     "gaming-portal": "file:",
     "react": "^19.0.0",
@@ -33,6 +33,7 @@
     "globals": "^15.14.0",
     "postcss": "^8.5.2",
     "tailwindcss": "^4.0.6",
-    "vite": "^6.1.0"
+    "vite": "^6.1.0",
+    "vite-plugin-environment": "^1.1.3"
   }
 }
